...
    internal func captureUserInputsForSending() {
        let username = self.loginForm.userTextField.text ?? ""
        let password = self.loginForm.passwordTextField.text ?? ""
        
        // Validate username is an email
        if password == "" || username == "" {
            let invalidUser = UIAlertController().simpleAlertPrompt(title: "Invalid", message: "Username and / or password field is blank.", preferredStyle: .alert, actionTitle: "Okay")
            self.present(invalidUser, animated: true, completion: nil)
            
        } else if !username.validateEmail() {
            let invalidUser = UIAlertController().simpleAlertPrompt(title: "Invalid", message: "Please enter a valid username / email address.", preferredStyle: .alert, actionTitle: "Okay")
            self.present(invalidUser, animated: true, completion: nil)
            
        } else if !password.validateAlphaNumericSymbol() {
            let invalidPassword = UIAlertController().simpleAlertPrompt(title: "Invalid", message: "Password should only be alphanumeric + symbols.", preferredStyle: .alert, actionTitle: "Okay")
            self.present(invalidPassword, animated: true, completion: nil)
            
        } else {
            let invalidUser = UIAlertController().simpleAlertPrompt(title: "Thank you!", message: "Attempting to log in.", preferredStyle: .alert, actionTitle: "Dismiss")
            self.present(invalidUser, animated: true, completion: nil)
            
            self.loginUsingCredentials(username: username, password: password)
        }
    }
    
...
