...
    }
    
    internal func userRated(rating: Int, isRated: Bool) {
        print("Sending rating of \(rating) to server.")
        var ratingPrompt_: UIAlertController?
        if !isRated {
            ratingPrompt_ = UIAlertController().simpleAlertPrompt(title: "Cancelled!", message: "Your rating has been cancelled", preferredStyle: .alert, actionTitle: nil)
        } else {
            ratingPrompt_ = UIAlertController().simpleAlertPrompt(title: "Thank you!", message: "Your rating has been submitted", preferredStyle: .alert, actionTitle: nil)
        }
        guard let ratingPrompt = ratingPrompt_ else { return }
        self.present(ratingPrompt, animated: true, completion: {
            Timer.scheduledTimer(withTimeInterval: 0.3, repeats: false, block: { _ in
...
